FIPS and encryption for sensitive data in storage and configuration files. Added Bouncy Castle as main security provider.